--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 					<div class="form-group">
 
 						<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-						<input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy a puppy" ng-model="formData.text">
+						<input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy a puppy lslss" ng-model="formData.text">
 					</div>
 
 					<!-- createToDo() WILL CREATE NEW TODOS -->
